# MathRadical

./: CMakeLists.txt  DEVELOPMENT.md  docker-compose.yml  main.cpp
.github/workflows/: backend.yml  ci.yml  frontend.yml
API/: Dockerfile  MathEngine.proto  gateway.py  main.py  math_engine_client.py  requirements.txt
Backend/: .gitignore  CMakeLists.txt  CorsMiddleWare.h  Dockerfile  MathEngineServer.cpp  main.cpp
Backend/Api/: MathUtilsRoutes.cpp  MathUtilsRoutes.h
Backend/Math/: Fraction.cpp  Fraction.h  MathEngineValidator.cpp  MathEngineValidator.h  MathUtils.cpp  MathUtils.h
Backend/Test/: Fraction_Test.cpp  Math_Utils_Test.cpp
Backend/cmake/: CPM.cmake
Frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
Frontend/src/: App.vue  main.ts
Frontend/src/api/: axios.ts  exampleService.ts  mathService.ts
Frontend/src/components/: MenuBar.vue  PageLayout.vue  ToolCard.vue  TwoInputResult.vue
Frontend/src/router/: index.ts
Frontend/src/views/: GreatestCommonDenominator.vue  Home.vue  LeastCommonMultiple.vue
Math/: MathUtils.cpp  MathUtils.h
